--- a/style/styles.css
+++ b/style/styles.css
@@ -33,13 +33,17 @@
     text-align: center;
     background-color: #f2f2f2;
 }
+.post {
+    overflow: hidden;
+}
 .postContainer {
     background: #fff;
     max-width: 1030px;
     padding: 40px 20px;
+    max-height: 100%;
+    overflow: hidden;
     margin: auto;
     height: auto;
-    border: 1px solid rgb(238, 239, 239);
 }
 .insta-photo {
     display: inline-block;
