-bug, #fff in background

--- a/style/styles.css
+++ b/style/styles.css
@@ -10,7 +10,8 @@ a {
     top: 100px;
     left: 0px;
     overflow: hidden;
-    background: url("../images/background.gif");
+    /*background: url("../images/background.gif");*/
+    background: #ffffff;
     text-align: center;
 }
 #header {
